Removed margin and padding 0 from body and added it to * selector.  This offset tabs so we fixed it with padding.  Added 20px to top and bottom margins for h2 and h3 element so it has appropriate spacing.  Added padding of 10px to paragraph container.

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,9 +4,12 @@
   Date Created: December 4, 2022
    Description: CSS Stylesheet for Restaurant Page  project.
 ******************************************************************************/
-body {
+* {
   margin: 0;
   padding: 0;
+}
+body {
+  
   background-image: url(../src/popcorn-background.jpg);
   background-repeat: repeat;
   background-size: 1000px 800px;
@@ -44,6 +47,8 @@ h1 {
 
   margin-left: auto;
   margin-right: auto;
+
+  padding-top: 37px;
 }
 
 .tabs li {
@@ -65,6 +70,8 @@ h1 {
 }
 
 h2, h3 {
+  margin-top: 20px;
+  margin-bottom: 5px;
   text-align: center;
 }
 
@@ -75,8 +82,7 @@ h2, h3 {
   margin-left: 100px;
   margin-right: 100px;
   
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 10px;
   text-align: center;
 }
 
